[package]
name = "bevy_background"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"

[dev-dependencies]
bevy_mod_debugdump = "0.2"

[[example]]
name = "spec"
path = "examples/spec.rs"

[[example]]
name = "dump_graph"
path = "examples/dump_graph.rs"